--- a/app/src/main/res/layout/button_music_activity.xml
+++ b/app/src/main/res/layout/button_music_activity.xml
@@ -103,15 +103,16 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="0.5"
                                     android:orientation="vertical">
+
                                     <ImageView
                                         android:id="@+id/chatimage1"
                                         android:layout_width="wrap_content"
-                                        android:layout_height="60dp"
+                                        android:layout_height="55dp"
                                         android:layout_marginStart="8dp"
                                         android:layout_marginTop="8dp"
                                         app:layout_constraintStart_toStartOf="parent"
                                         app:layout_constraintTop_toTopOf="parent"
-                                        tools:src="@drawable/pic3" />
+                                        tools:src="@drawable/profile1" />
                                 </LinearLayout>
 
                                 <LinearLayout
